# pulse

./: .gitignore  AGENTS.md  GH_US.md  Makefile  PRD.md  README.md  build-tailwind-prod.sh  build-tailwind.sh  convert.py  pyproject.toml  tailwind.config.js  test_grouping.py
app/: config.json  main.py
app/static/: charting.js  style.css  tailwind.min.css
app/templates/: base.html  edit.html  index.html
data/: bp.ndjson  bp.ndjson.backup  bp.ndjson.backup.20251214_105029  bp.ndjson.backup.20251214_110403  bp.ndjson.backup.20251214_110825  bp.ndjson.backup.20251214_112241  bp.ndjson.backup.20260103_121830  bp.ndjson.backup.20260103_121921  bp.ndjson.backup.20260219_155635  bp.ndjson.backup.20260220_074501  bp.ndjson_old  bp.ndjson_old_2
icons/: site.webmanifest
plans/: header-redesign-plan.md
