[project]
name = "pulse"
version = "0.1.0"
description = "My blood pressure and pulse tracking app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
